--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <h2 class="title"><a href="index.html"><img src="imgs/apicord.jpeg" alt="Logo"></a> APIcord</h2>
+      <h2 class="title"><a href="index.html"><img src="imgs/apicord.jpeg" alt="Logo"></a> Error 404</h2>
       <h2 class="bars"><a href="menu.html" class="noa"><i class="fa fa-bars" aria-hidden="true"></i></a></h2>
     </header>
     <hr><br>
