--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="description" content="APIcord is a line of simple bots powered by simple APIs">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Comapatible" content="id=edge">
-    <link rel="stylesheet" href="/css/dark.css">
+    <link rel="stylesheet" href="/web2/css/dark.css">
     <link rel="shortcut icon" href="/imgs/apicon2.png">
     <title>APIcord</title>
   </head>
