--- a/status.html
+++ b/status.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header>
-      <h2 class="title"><a href="index.html"><img src="imgs/apicord.jpeg" alt="Logo"></a> Status</h2>
+      <h2 class="title"><a href="index.html"><img src="imgs/apicord.jpeg" alt="Logo"></a> APIcord Status Page</h2>
       <h2 class="bars"><a href="menu.html" class="noa"><i class="fa fa-bars" aria-hidden="true"></i></a></h2>
     </header>
     <hr>
