--- a/404.html
+++ b/404.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="author" content="Absucc">
-    <meta name="keywords" content="Python bot,Python,Discord,Discord bot,DBL,API,APIs,API powered,Python powered,APIcord">
+    <meta charset="utf-8" />
+    <meta name="author" content="Absucc" />
+    <meta name="keywords" content="Python bot,Python,Discord,Discord bot,DBL,API,APIs,API powered,Python powered,APIcord" />
     <meta name="description" content="APIcord is a line of simple bots powered by simple APIs">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Comapatible" content="id=edge">
-    <link rel="stylesheet" href="/web2/css/dark.css">
-    <link rel="shortcut icon" href="/imgs/apicon2.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Comapatible" content="id=edge" />
+    <link rel="stylesheet" href="/css/dark.css" />
+    <link rel="shortcut icon" href="/imgs/apicon2.png" />
     <title>APIcord</title>
   </head>
   <body>
     <header>
-      <h2 class="title"><a href="index.html"><img src="imgs/apicord.jpeg" alt="Logo"></a> Error 404</h2>
-      <h2 class="bars"><a href="menu.html" class="noa"><i class="fa fa-bars" aria-hidden="true"></i></a></h2>
+      <h2 class="title"><a href="/index.html" style="text-decoration:none;color:white"><img style="border-radius:0;width:5%" src="/imgs/apicon2.png" alt="Logo" /> APIcord</a></h2>
+      <!--<h2 class="bars"><a href="menu.html" class="noa"><i class="fa fa-bars" aria-hidden="true"></i></a></h2>--><!--<h2 class="bars">aa</h2>-->
+      <h4><a href="/invite/">Invite</a> - <a href="https://github.com/APIcord/discord">Source Code</a> - <a href="https://gitlab.com/APIcord/discord">Mirror</a> - <a href="https://github.com/APIcord/discord/blob/master/README.md">README.md</a></h3>
     </header>
-    <hr><br>
-    <div class="sub-stuff" style="text-align:center;">
+    <hr />
+    <div class="sub-stuff" style="text-align:center">
       <h1>Error 404</h1>
       <p>Page not found</p>
     </div><br>
@@ -31,29 +32,28 @@
         <tr>
           <td>
             <a href="https://github.com/APIcord">
-              GitHub <i class="fa fa-github" aria-hidden="true"></i>
-            </a><br>
+              GitHub <i class="fa fa-github"></i>
+            </a><br />
             <a href="https://gitlab.com/APIcord">
-              GitLab <i class="fa fa-gitlab" aria-hidden="true"></i>
+              GitLab <i class="fa fa-gitlab"></i>
             </a>
           </td>
           <td>
             <a href="https://t.me/apicord">
-              Telegram <i class="fa fa-telegram" aria-hidden="true"></i>
-            </a><br>
-            <a href="https://mastodon.online/@lucas/tagged/APIcord">
-              Mastodon <i class="fa fa-mastodon" aria-hidden="true"></i>
+              Telegram <i class="fa fa-telegram"></i>
+            </a><br />
+            <a href="https://fosstodon.org/@APIcord">
+              Mastodon <i class="fa fa-mastodon"></i>
             </a>
           </td>
           <td>
-            <a href="/privacy.html">Privacy Policy</a><br>
-            <a href="/status.html">Bot status</a><br>
-            <a href="https://github.com/APIcord/APIcord.github.io">Source code</a>
+            <a href="/privacy.html">Privacy Policy <i class="fa fa-file-text"></i></a><br />
+            <a href="/status/">Status <i class="fa fa-server"></i></a>
           </td>
         </tr>
       </table>
       <p>
-        &copy;2020-2021 <a href="https://lucas.codeberg.page">Absucc</a>
+        &copy;2020-2021 <a href="https://absucc.thedev.id">Absucc</a>
       </p>
     </footer>
   </body>
