--- a/500.html
+++ b/500.html
@@ -17,7 +17,7 @@
       <h2 class="bars"><a href="menu.html" class="noa"><i class="fa fa-bars" aria-hidden="true"></i></a></h2>
     </header>
     <hr><br>
-    <div class="sub-stuff" style="text-align:center;">
+    <div class="sub-stuff" style="text-align:center">
       <h1>Error 500</h1>
       <p>Internal server error</p>
       <br>
