--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ title: APIcord
 ---
 {% include header.html %}
     <div id="main" display="block">
+      <div style="text-align:center"><hr><h3><a style="color:white" href="https://fosstodon.org/@APIcord/106999534653986122">APIcord doesn't work anymore</a></h3><p>Thank for using it</p><hr></div>
       <br/>
       <h2>Functions</h2>
       <ul>
